testsuite/bsc.names/portRenaming/invalidAttrs/osc/WrongLoc_InoutArg.bsv
module sysWrongLoc_InoutArg ((*osc="clk"*) Inout#(Bool) i, Empty e);
endmodule

